Updated README.md, reorganized files, added banner to RCA mode

--- a/src/webview/ui/index.html
+++ b/src/webview/ui/index.html
@@ -174,6 +174,11 @@
 
                     <!-- RCA Mode -->
                     <div id="rca-mode-container" class="rca-mode-container" style="display: none;">
+                        <!-- RCA Alpha disclaimer banner -->
+                        <div id="rca-alpha-banner" class="rca-alpha-banner" role="status">
+                            <span class="rca-alpha-banner-text">Alpha — In Progress</span>
+                            <span class="rca-alpha-banner-subtext">RCA mode has not been fully tested and may contain bugs. Use with caution.</span>
+                        </div>
                         <!-- RCA Phases Section -->
                         <div id="rca-run-phases-section" class="rca-run-phases">
                             <!-- Phase Tabs Navigation -->
